@@ -320,8 +320,6 @@ void search_file_single_match(char * const addr, size_t len, const char * const 
  */
 inline int check_excluded_paths(const char * const fpath){
     if (settings.excluded_paths){
-        if (!settings.base_search_path_length)
-            settings.base_search_path_length = strlen(fpath) + 1;
         for (DIR_LIST *pth = settings.excluded_paths; pth; pth = pth->next){
             if (strcmp(pth->dir, fpath + settings.base_search_path_length) == 0)
                 return 1;
